--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </address>
 </header>
 <main>
-    <section>
+    <section class="title-back">
         <h1 class="title">
             Effective Solutions
             for Your Business
