--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </ul>
 </section>
 </main>
-<footer>
+<footer class="mission-back">
     <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
     <p class="mission">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
