--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
  <header>
    <nav> 
-    <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+    <a class="logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
     <ul>
-        <li><a class="nav-link" href=""> Studio </a></li>
-        <li><a class="nav-link" href=""> Portfolio </a></li>
-        <li><a class="nav-link" href=""> Contacts </a></li>
+        <li><a class="nav-link" href="./index.html"> Studio </a></li>
+        <li><a class="nav-link" href="./index.html"> Portfolio </a></li>
+        <li><a class="nav-link" href="./index.html"> Contacts </a></li>
     </ul>
     </nav>
     <address class="address">
