--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section class="team-back">
     <h2 class="team">Our Team</h2>
     <ul>
-        <li>
+        <li class="team-li">
             <img src="./images/img-3-1.jpg" alt="Mark Guerrero" width="264" height="260" >
             <h3 class="team-foto">Mark Guerrero</h3>
             <p class="team-job">Product Designer</p>
@@ -71,7 +71,7 @@
         <li>
             <img src="./images/img-min.jpg" alt="Tom Ford" width="264" height="260" >
             <h3 class="team-foto">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="team-job">Frontend Developer</p>
         </li>
         <li>
             <img src="./images/img-1-1.jpg" alt="Camila Garcia" width="264" height="260" >
