--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h3 class="team-foto">Mark Guerrero</h3>
             <p class="team-job">Product Designer</p>
         </li>
-        <li>
+        <li class="team-li">
             <img src="./images/img-min.jpg" alt="Tom Ford" width="264" height="260" >
             <h3 class="team-foto">Tom Ford</h3>
             <p class="team-job">Frontend Developer</p>
@@ -78,7 +78,7 @@
             <h3 class="team-foto">Camila Garcia</h3>
             <p class="team-job">Marketing</p>
         </li>
-        <li>
+        <li class="team-li">
             <img src="./images/img-2-1.jpg" alt="Daniel Wilson" width="264" height="260" >
             <h3 class="team-foto">Daniel Wilson</h3>
             <p class="team-job">UI Designer</p>
