--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h3 class="team-foto">Tom Ford</h3>
             <p class="team-job">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-li">
             <img src="./images/img-1-1.jpg" alt="Camila Garcia" width="264" height="260" >
             <h3 class="team-foto">Camila Garcia</h3>
             <p class="team-job">Marketing</p>
